Fix definitivo drag giostra su mobile: direction-lock, preventDefault touchmove, overflow clip, draggable off

--- a/css/hero.css
+++ b/css/hero.css
@@ -95,6 +95,7 @@
   user-select: none;
   -webkit-user-select: none;
   -webkit-user-drag: none;
+  -webkit-touch-callout: none; /* iOS: niente drag&drop/anteprima del link col dito */
   -webkit-tap-highlight-color: transparent;
 }
 .ring-card:hover {
